--- a/weeklong-starter.ipynb
+++ b/weeklong-starter.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 59,
       "metadata": {
         "id": "uHE7HhLZ6utW"
       },
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 60,
       "metadata": {
         "id": "-OKVxe4-JaZN"
       },
@@ -67,14 +67,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 61,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 634
         },
         "id": "krj8ZRd26nLj",
-        "outputId": "77718ecd-00de-489a-b7a5-5e4f8d824b8a"
+        "outputId": "d94ff5e6-9152-463a-fcd3-57d624614c81"
       },
       "outputs": [
         {
@@ -150,7 +150,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3b51304f-75ef-4bb2-8255-36ac37ef292d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-bbf6ea84-1619-4116-8c06-7ad9405c417c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -464,7 +464,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3b51304f-75ef-4bb2-8255-36ac37ef292d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bbf6ea84-1619-4116-8c06-7ad9405c417c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -516,12 +516,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-3b51304f-75ef-4bb2-8255-36ac37ef292d button.colab-df-convert');\n",
+              "        document.querySelector('#df-bbf6ea84-1619-4116-8c06-7ad9405c417c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-3b51304f-75ef-4bb2-8255-36ac37ef292d');\n",
+              "        const element = document.querySelector('#df-bbf6ea84-1619-4116-8c06-7ad9405c417c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -541,8 +541,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-bb76e5da-f152-44d3-8fb4-87a019837f36\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-bb76e5da-f152-44d3-8fb4-87a019837f36')\"\n",
+              "    <div id=\"df-aeba8ed0-1911-40a6-9fb4-07fec4611a74\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-aeba8ed0-1911-40a6-9fb4-07fec4611a74')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -661,14 +661,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-bb76e5da-f152-44d3-8fb4-87a019837f36 button');\n",
+              "            document.querySelector('#df-aeba8ed0-1911-40a6-9fb4-07fec4611a74 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_bc520b12-8f20-4eb0-884f-184f7c1b9c59\">\n",
+              "  <div id=\"id_9228cb75-9f9a-4e83-accf-7f3408792db4\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -712,7 +712,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_bc520b12-8f20-4eb0-884f-184f7c1b9c59 button.colab-df-generate');\n",
+              "        document.querySelector('#id_9228cb75-9f9a-4e83-accf-7f3408792db4 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -732,7 +732,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 61
         }
       ],
       "source": [
@@ -755,13 +755,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 62,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1qj0aqsqJaZN",
-        "outputId": "1c3ac2d3-04e4-4037-81d4-563c6b05592f"
+        "outputId": "80a8f3c4-e02d-4354-cb4c-1bf776997025"
       },
       "outputs": [
         {
@@ -808,13 +808,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 63,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GsVQWpuGJaZO",
-        "outputId": "90f52717-2718-4e8c-ef6c-6385e0d05383"
+        "outputId": "2f014931-f3e7-424e-f4d1-eba26157cc95"
       },
       "outputs": [
         {
@@ -912,13 +912,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 64,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "mqke_CvYJaZO",
-        "outputId": "49e2081e-2fa9-448f-a790-386674371314"
+        "outputId": "fb49cd92-f910-43b3-d40a-c7629dbc3f19"
       },
       "outputs": [
         {
@@ -993,33 +993,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "46af8dc2",
-        "outputId": "921ee8c8-d0d4-467b-8bd3-684cd9703cbd"
+        "outputId": "99caf969-72bd-4ba1-c150-227a125f850c"
       },
       "source": [
         "# Evaluate the models using R-squared as the metric\n",
-        "from sklearn.metrics import r2_score\n",
+        "# Using model.score() which returns R-squared for regressors\n",
+        "from sklearn.metrics import r2_score # Still need this for the explicit r2_score calculation in case model.score() isn't available or for clarity\n",
         "\n",
-        "results = {}\n",
-        "model = models[selected_model_name]\n",
-        "predictions = model.predict(features_test_processed)\n",
-        "r2 = r2_score(target_test, predictions)\n",
-        "results[selected_model_name] = r2\n",
+        "\n",
+        "# Only evaluate the selected model\n",
+        "if selected_model_name in models:\n",
+        "    model = models[selected_model_name]\n",
+        "    # Use the score method, which returns R-squared for regressors\n",
+        "    r2 = model.score(features_test_processed, target_test)\n",
+        "else:\n",
+        "    print(f\"Model '{selected_model_name}' not found in the models dictionary.\")\n",
         "\n",
         "\n",
         "# Print the results\n",
-        "print(\"\\nModel Evaluation Results (R-squared):\")\n",
-        "for name, r2_score_value in results.items():\n",
-        "    print(f\"{name}: {r2_score_value:.4f}\")"
+        "print(f\"\\nModel Evaluation Results: {r2}\")\n"
       ],
-      "execution_count": 49,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "Model Evaluation Results (Mean Squared Error):\n",
-            "KNeighbors Regressor: 0.2865\n"
+            "Model Evaluation Results (R-squared):\n",
+            "KNeighbors Regressor: 0.1941\n"
           ]
         }
       ]
@@ -1042,7 +1044,7 @@
           "height": 341
         },
         "id": "c63ead42",
-        "outputId": "bb7f836f-1c5f-4330-99fc-c3efa420e767"
+        "outputId": "f893a4ab-53e2-42c8-d8e0-fbacdacc1672"
       },
       "source": [
         "# Make predictions on the test set\n",
@@ -1060,7 +1062,7 @@
         "predictions_df = pd.DataFrame(predictions, columns=target_test.columns, index=target_test.index)\n",
         "display(predictions_df.head(n_samples_to_show))"
       ],
-      "execution_count": 50,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
@@ -1100,7 +1102,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fe08b114-92e2-40cc-99d3-44ce7440000b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-6261c5db-9158-4eed-84f0-27e85007e421\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1209,7 +1211,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fe08b114-92e2-40cc-99d3-44ce7440000b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6261c5db-9158-4eed-84f0-27e85007e421')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1261,12 +1263,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-fe08b114-92e2-40cc-99d3-44ce7440000b button.colab-df-convert');\n",
+              "        document.querySelector('#df-6261c5db-9158-4eed-84f0-27e85007e421 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-fe08b114-92e2-40cc-99d3-44ce7440000b');\n",
+              "        const element = document.querySelector('#df-6261c5db-9158-4eed-84f0-27e85007e421');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1286,8 +1288,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-f426f838-857f-48fc-9032-60d1efcfad16\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f426f838-857f-48fc-9032-60d1efcfad16')\"\n",
+              "    <div id=\"df-a9c107b8-c9b5-4b51-8dba-8e2d2662b6fa\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a9c107b8-c9b5-4b51-8dba-8e2d2662b6fa')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1406,7 +1408,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-f426f838-857f-48fc-9032-60d1efcfad16 button');\n",
+              "            document.querySelector('#df-a9c107b8-c9b5-4b51-8dba-8e2d2662b6fa button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1462,7 +1464,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-733679c6-9b7e-44ef-b597-4cad894bbbe1\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-af29df06-1fd1-4292-bd78-124a358f0d81\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1571,7 +1573,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-733679c6-9b7e-44ef-b597-4cad894bbbe1')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-af29df06-1fd1-4292-bd78-124a358f0d81')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1623,12 +1625,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-733679c6-9b7e-44ef-b597-4cad894bbbe1 button.colab-df-convert');\n",
+              "        document.querySelector('#df-af29df06-1fd1-4292-bd78-124a358f0d81 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-733679c6-9b7e-44ef-b597-4cad894bbbe1');\n",
+              "        const element = document.querySelector('#df-af29df06-1fd1-4292-bd78-124a358f0d81');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1648,8 +1650,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-956d7610-0476-41fe-865e-402567390d8a\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-956d7610-0476-41fe-865e-402567390d8a')\"\n",
+              "    <div id=\"df-d8079df7-37cc-4bc0-aefb-ae5f333fc945\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d8079df7-37cc-4bc0-aefb-ae5f333fc945')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1768,7 +1770,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-956d7610-0476-41fe-865e-402567390d8a button');\n",
+              "            document.querySelector('#df-d8079df7-37cc-4bc0-aefb-ae5f333fc945 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
