--- a/weeklong-starter.ipynb
+++ b/weeklong-starter.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 67,
       "metadata": {
         "id": "uHE7HhLZ6utW"
       },
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 68,
       "metadata": {
         "id": "-OKVxe4-JaZN"
       },
@@ -67,14 +67,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 69,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 634
         },
         "id": "krj8ZRd26nLj",
-        "outputId": "d94ff5e6-9152-463a-fcd3-57d624614c81"
+        "outputId": "a3b01ab0-05c9-4c17-cfb7-4d634786eb0f"
       },
       "outputs": [
         {
@@ -150,7 +150,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-bbf6ea84-1619-4116-8c06-7ad9405c417c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-398294e2-b917-4dd9-ae60-90bb3283162f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -464,7 +464,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bbf6ea84-1619-4116-8c06-7ad9405c417c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-398294e2-b917-4dd9-ae60-90bb3283162f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -516,12 +516,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-bbf6ea84-1619-4116-8c06-7ad9405c417c button.colab-df-convert');\n",
+              "        document.querySelector('#df-398294e2-b917-4dd9-ae60-90bb3283162f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-bbf6ea84-1619-4116-8c06-7ad9405c417c');\n",
+              "        const element = document.querySelector('#df-398294e2-b917-4dd9-ae60-90bb3283162f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -541,8 +541,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-aeba8ed0-1911-40a6-9fb4-07fec4611a74\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-aeba8ed0-1911-40a6-9fb4-07fec4611a74')\"\n",
+              "    <div id=\"df-88cc6fab-24a6-445e-825d-2167979a57fb\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-88cc6fab-24a6-445e-825d-2167979a57fb')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -661,14 +661,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-aeba8ed0-1911-40a6-9fb4-07fec4611a74 button');\n",
+              "            document.querySelector('#df-88cc6fab-24a6-445e-825d-2167979a57fb button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_9228cb75-9f9a-4e83-accf-7f3408792db4\">\n",
+              "  <div id=\"id_37833ad1-faae-45bb-a93f-c38d4ed8496e\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -712,7 +712,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_9228cb75-9f9a-4e83-accf-7f3408792db4 button.colab-df-generate');\n",
+              "        document.querySelector('#id_37833ad1-faae-45bb-a93f-c38d4ed8496e button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -732,7 +732,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 61
+          "execution_count": 69
         }
       ],
       "source": [
@@ -755,13 +755,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 70,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1qj0aqsqJaZN",
-        "outputId": "80a8f3c4-e02d-4354-cb4c-1bf776997025"
+        "outputId": "ba3f7960-4de7-40c2-8c20-f03f0ca33d11"
       },
       "outputs": [
         {
@@ -808,13 +808,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 71,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GsVQWpuGJaZO",
-        "outputId": "2f014931-f3e7-424e-f4d1-eba26157cc95"
+        "outputId": "cb3cda5b-87a5-4f68-8c1e-c48e1dccc1eb"
       },
       "outputs": [
         {
@@ -912,13 +912,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 72,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "mqke_CvYJaZO",
-        "outputId": "fb49cd92-f910-43b3-d40a-c7629dbc3f19"
+        "outputId": "bdcef588-e5c5-4380-efb1-15f8ffbd626f"
       },
       "outputs": [
         {
@@ -948,14 +948,27 @@
         "    \"KNeighbors Regressor\": knn_regressor\n",
         "}\n",
         "\n",
-        "# Select model\n",
-        "selected_model_name = \"KNeighbors Regressor\"\n",
+        "# Set the name of the model you want to train\n",
+        "selected_model_name = \"Random Forest Regressor\" # Changed to Random Forest Regressor\n",
         "\n",
-        "# Define hyperparameters\n",
+        "# Define hyperparameters for the selected model\n",
+        "# This is an example for RandomForestRegressor\n",
         "hyperparameters = {\n",
-        "    'estimator__n_neighbors': 7,\n",
-        "    'estimator__weights': 'distance'\n",
+        "    'n_estimators': 200, # Number of trees\n",
+        "    'max_depth': 20, # Maximum depth of trees\n",
+        "    'min_samples_split': 5, # Minimum samples required to split\n",
+        "    'min_samples_leaf': 2, # Minimum samples at a leaf node\n",
+        "    'max_features': 'sqrt' # Number of features to consider for splits\n",
         "}\n",
+        "\n",
+        "# # Select model\n",
+        "# selected_model_name = \"KNeighbors Regressor\"\n",
+        "\n",
+        "# # Define hyperparameters\n",
+        "# hyperparameters = {\n",
+        "#     'estimator__n_neighbors': 7,\n",
+        "#     'estimator__weights': 'distance'\n",
+        "# }\n",
         "\n",
         "\n",
         "# Train the selected model\n",
@@ -993,7 +1006,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "46af8dc2",
-        "outputId": "99caf969-72bd-4ba1-c150-227a125f850c"
+        "outputId": "cfdbc2bd-0cb8-4d83-b5cf-0294fb990aef"
       },
       "source": [
         "# Evaluate the models using R-squared as the metric\n",
@@ -1013,15 +1026,14 @@
         "# Print the results\n",
         "print(f\"\\nModel Evaluation Results: {r2}\")\n"
       ],
-      "execution_count": 65,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "Model Evaluation Results (R-squared):\n",
-            "KNeighbors Regressor: 0.1941\n"
+            "Model Evaluation Results: 0.1941193085124531\n"
           ]
         }
       ]
@@ -1044,7 +1056,7 @@
           "height": 341
         },
         "id": "c63ead42",
-        "outputId": "f893a4ab-53e2-42c8-d8e0-fbacdacc1672"
+        "outputId": "1fda2995-23fb-460a-fb49-085d2a0a6bfa"
       },
       "source": [
         "# Make predictions on the test set\n",
@@ -1062,7 +1074,7 @@
         "predictions_df = pd.DataFrame(predictions, columns=target_test.columns, index=target_test.index)\n",
         "display(predictions_df.head(n_samples_to_show))"
       ],
-      "execution_count": 66,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
@@ -1102,7 +1114,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6261c5db-9158-4eed-84f0-27e85007e421\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c53aefc8-98e4-4313-aeec-fff6f031e249\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1211,7 +1223,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6261c5db-9158-4eed-84f0-27e85007e421')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c53aefc8-98e4-4313-aeec-fff6f031e249')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1263,12 +1275,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6261c5db-9158-4eed-84f0-27e85007e421 button.colab-df-convert');\n",
+              "        document.querySelector('#df-c53aefc8-98e4-4313-aeec-fff6f031e249 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6261c5db-9158-4eed-84f0-27e85007e421');\n",
+              "        const element = document.querySelector('#df-c53aefc8-98e4-4313-aeec-fff6f031e249');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1288,8 +1300,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-a9c107b8-c9b5-4b51-8dba-8e2d2662b6fa\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a9c107b8-c9b5-4b51-8dba-8e2d2662b6fa')\"\n",
+              "    <div id=\"df-4788b43d-79e9-4f5c-a7c4-95a629612443\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4788b43d-79e9-4f5c-a7c4-95a629612443')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1408,7 +1420,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-a9c107b8-c9b5-4b51-8dba-8e2d2662b6fa button');\n",
+              "            document.querySelector('#df-4788b43d-79e9-4f5c-a7c4-95a629612443 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1464,7 +1476,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-af29df06-1fd1-4292-bd78-124a358f0d81\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-de6f1f92-be5b-4bc9-9389-75d5d1e4e368\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1573,7 +1585,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-af29df06-1fd1-4292-bd78-124a358f0d81')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-de6f1f92-be5b-4bc9-9389-75d5d1e4e368')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1625,12 +1637,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-af29df06-1fd1-4292-bd78-124a358f0d81 button.colab-df-convert');\n",
+              "        document.querySelector('#df-de6f1f92-be5b-4bc9-9389-75d5d1e4e368 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-af29df06-1fd1-4292-bd78-124a358f0d81');\n",
+              "        const element = document.querySelector('#df-de6f1f92-be5b-4bc9-9389-75d5d1e4e368');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1650,8 +1662,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-d8079df7-37cc-4bc0-aefb-ae5f333fc945\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d8079df7-37cc-4bc0-aefb-ae5f333fc945')\"\n",
+              "    <div id=\"df-6a2c934e-6954-4f8d-978f-4d3d7a438ba5\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6a2c934e-6954-4f8d-978f-4d3d7a438ba5')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1770,7 +1782,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-d8079df7-37cc-4bc0-aefb-ae5f333fc945 button');\n",
+              "            document.querySelector('#df-6a2c934e-6954-4f8d-978f-4d3d7a438ba5 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
